#Changelog for final submission

### Added
- Custom shaders for Sun and Moon objects